Closed
Bug 935375
Opened 7 years ago
Closed 7 years ago
Word offsets broken if the next word is an embedded object
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla29
People
(Reporter: Jamie, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: regression, Whiteboard: [qa-])
Attachments
(2 files)
14.32 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
5.26 KB,
patch
|
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Str: 1. Use the following code: <body> a <a href="#">b</a> </body> 2. Get the offsets for the word at offset 0; e.g. via IAccessibleText::textAtOffset with IA2_TEXT_BOUNDARY_WORD. Expected: (0, 2) Actual: (2, 2) Same for offset 1. Impact: Among other things, brokenness for screen reader users when using control+backspace in these situations. Symptom originally reported by an NVDA user here: http://community.nvda-project.org/ticket/3621
Assignee | ||
Updated•7 years ago
|
Blocks: getText*a11y
Assignee | ||
Comment 1•7 years ago
|
||
I get (0, 2) on Nightly. Jamie, can you retest it please and if it doesn't work then provide a test case (simple "data:text/html,a <a href="www">b</a>" works as expected for me)
Reporter | ||
Comment 2•7 years ago
|
||
Wow! I didn't know about data: URLs. You learn something new every day. :) Just tested with latest nightly and I get the same result using an html file. I even pasted: data:text/html,a <a href="www">b</a> into the Address bar and tested with that. I get the same result.
Reporter | ||
Comment 3•7 years ago
|
||
To clarify (since i wasn't clear in my str), I'm doing this on the document accessible.
Assignee | ||
Comment 4•7 years ago
|
||
you're right, I just figured out I tested wrong version. I can reproduce a problem now (In reply to James Teh [:Jamie] from comment #2) > Wow! I didn't know about data: URLs. You learn something new every day. :) yep, it's a nice feature, I just get used to forget it syntax occasionally :)
Assignee | ||
Comment 5•7 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #8341692 -
Flags: review?(trev.saunders)
Updated•7 years ago
|
Attachment #8341692 -
Flags: review?(trev.saunders) → review+
Assignee | ||
Comment 6•7 years ago
|
||
http://hg.mozilla.org/integration/mozilla-inbound/rev/aa29a685d835
Flags: in-testsuite+
Comment 7•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/aa29a685d835
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Assignee | ||
Updated•7 years ago
|
Keywords: regression
Assignee | ||
Comment 8•7 years ago
|
||
[Approval Request Comment] Bug caused by (feature/regressing bug #): something from recent text works, bug getText*a11y User impact if declined: text navigation problem in firefox/thunderbird for AT users Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): small risk (should be ok for early cycle) String or IDL/UUID changes made by this patch: no
Attachment #8349050 -
Flags: approval-mozilla-aurora?
Updated•7 years ago
|
Attachment #8349050 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•