Bug 935375 - Word offsets broken if the next word is an embedded object, r=tbsaunde